--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "csui",
+  "name": "zycc",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,7 +10,6 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
-    "element-ui": "^2.15.6",
     "vue": "^2.6.14"
   },
   "devDependencies": {
